...
              />
            </Pressable>
          ),
        }}
      />
      <FlatList
        testID="groups-list"
        contentInsetAdjustmentBehavior="automatic"
        data={groups.data ?? []}
        keyExtractor={(group) => group.id}
        ListHeaderComponent={header}
        ListEmptyComponent={empty}
        contentContainerStyle={{
...
